few more Implementation
